--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@
 } */
 
 .hck-logo{
-  width: 80px;
+  width: 65px;
   height: 60px;
+  background: white;
+  border-radius: 50%;
 
 }
 .hero-banner-img img{
@@ -31,4 +33,11 @@ height: 100px;
 .footer-HCK-logo img{
   height:100px;
   width: 250px;
+  background: white;
+  border-radius: 12px;
+
+}
+
+.carousell{
+  height:90vh;
 }
